# CEPCSW

Reconstruction/: CMakeLists.txt
Reconstruction/TracccAlg/: CMakeLists.txt
Reconstruction/TracccAlg/options/: TracccAlg.py
Reconstruction/TracccAlg/src/: TracccAlg.cpp  TracccAlg.h  syclevent.h
Reconstruction/TracccAlg/src/csv2/: reader.hpp  writer.hpp
