add_subdirectory(DCHDedx)
add_subdirectory(Digi_Calo)
add_subdirectory(PFA)
add_subdirectory(SiliconTracking)
add_subdirectory(Tracking)
add_subdirectory(RecGenfitAlg)

find_package(traccc REQUIRED)
if (TRACCC_FOUND)
  add_subdirectory(TracccAlg)
else ()
   message(FATAL_ERROR "traccc library not found.")
endif()